--- a/versevision/package.json
+++ b/versevision/package.json
@@ -17,8 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
-    "versevision": "file:",
+    "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
