--- a/versevision/netlify.toml
+++ b/versevision/netlify.toml
@@ -5,3 +5,7 @@
 [secrets]
   # Tell Netlify’s secret scanner to ignore Supabase public keys
   omit_keys = ["REACT_APP_SUPABASE_URL", "REACT_APP_SUPABASE_ANON_KEY"]
+
+[build.environment]
+  SECRETS_SCAN_ENABLED = "true"
+  SECRETS_SCAN_OMIT_KEYS = "REACT_APP_SUPABASE_ANON_KEY,REACT_APP_SUPABASE_URL"
