--- a/versevision/netlify.toml
+++ b/versevision/netlify.toml
@@ -9,3 +9,9 @@
 [build.environment]
   SECRETS_SCAN_ENABLED = "true"
   SECRETS_SCAN_OMIT_KEYS = "REACT_APP_SUPABASE_ANON_KEY,REACT_APP_SUPABASE_URL"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
